--- a/.github/workflows/main_node-app-github.yml
+++ b/.github/workflows/main_node-app-github.yml
@@ -12,7 +12,7 @@ jobs:
     - name : Second
       uses: sshnaidm/gpt-code-review-action@v1.0
       with:
-        openai-key: "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"
+        openai-key: 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
   job2:
     name: Second job
     runs-on: windows-latest
