--- a/.github/workflows/main_node-app-github.yml
+++ b/.github/workflows/main_node-app-github.yml
@@ -12,7 +12,7 @@ jobs:
     - name : Second
       uses: sshnaidm/gpt-code-review-action@v1.0
       with:
-        openai-key: "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"
+        openai-key: ${{ secrets.OPENAI_API_KEY }}
   job2:
     name: Second job
     runs-on: windows-latest
