--- a/.github/workflows/main_node-app-github.yml
+++ b/.github/workflows/main_node-app-github.yml
@@ -13,6 +13,7 @@ jobs:
       uses: sshnaidm/gpt-code-review-action@v1.0
       with:
         openai-key: ${{ secrets.OPENAI_API_KEY }}
+        model: 'gpt-4'
   job2:
     name: Second job
     runs-on: windows-latest
